--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,22 @@
 black==22.1.0
+blinker==1.6.2
 blue==0.9.1
 click==8.1.3
 flake8==4.0.1
+Flask==2.3.2
+Flask-JWT-Extended==4.5.2
+Flask-WTF==1.1.1
 isort==5.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
 mccabe==0.6.1
 mypy-extensions==1.0.0
 pathspec==0.11.1
 platformdirs==3.5.3
 pycodestyle==2.8.0
 pyflakes==2.4.0
+PyJWT==2.7.0
 tomli==2.0.1
+Werkzeug==2.3.6
+WTForms==3.0.1
