--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ platformdirs==3.5.3
 pycodestyle==2.8.0
 pyflakes==2.4.0
 PyJWT==2.7.0
+python-dotenv==1.0.0
 tomli==2.0.1
 Werkzeug==2.3.6
 WTForms==3.0.1
